# Modern-Cpp-2020

./: README.md
homework_1/: hello_world.cpp
homework_1/task_2/: CMakeLists.txt  build.sh
homework_2/: CMakeLists.txt  guessing_game.cpp  input_arguments.cpp
homework_3/: CMakeLists.txt  main.cpp
homework_3/api/: CMakeLists.txt  html_writer.cpp  html_writer.hpp  image_browser.cpp
homework_4/: CMakeLists.txt  homework_4.cpp  homework_4.h  main.cpp
